# homework_7

./: Dockerfile  config.ini  db.py  model.py  my_select.py  pyproject.toml  seeds.py
alembic/: env.py
alembic/versions/: 84b1de540bb1_init.py
