[tool.poetry]
name = "homework-7"
version = "0.1.0"
description = ""
authors = ["Alena-Mishchenko <131773665+Alena-Mishchenko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.28"
faker = "^24.2.0"
alembic = "^1.13.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
